compiler/testData/diagnostics/testsWithStdLib/annotations/publicField/publicFieldOnDelegatedProperty.kt
class C {
    private <!INAPPLICABLE_PUBLIC_FIELD!>@kotlin.jvm.publicField<!> val a: String by kotlin.lazy { "A" }
}